--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "@ursa/core",
+  "name": "@ursajs/core",
   "version": "0.0.1",
   "description": "> TODO: description",
   "author": "zhangzhihua <zhangzhihua01@58ganji.com>",
   "license": "ISC",
   "main": "lib/index.js",
   "directories": {
-    "lib": "lib",
-    "test": "__tests__"
+    "lib": "lib"
   },
   "files": [
     "lib",
     "index.d.ts"
   ],
   "publishConfig": {
+    "registry": "http://registry.npmjs.org"
   },
   "scripts": {
     "fix": "esw src --fix --ext .ts",
@@ -52,5 +52,12 @@
     "npm-run-all": "^4.1.5",
     "typescript": "^3.2.2"
   },
-  "gitHead": "23e9211bf5940c92e3fe3a59d11ac90f0cd93973"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Ursajs/Ursa.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Ursajs/Ursa/issues"
+  },
+  "homepage": "https://github.com/Ursajs/Ursa#readme"
 }
