--- a/packages/plugin-status/package.json
+++ b/packages/plugin-status/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ursa/plugin-status",
+  "name": "@ursajs/plugin-status",
   "version": "0.0.1",
   "description": "> TODO: description",
   "author": "zhangzhihua <zhangzhihua01@58ganji.com>",
@@ -26,7 +26,7 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "@ursa/core": "^0.0.1"
+    "@ursajs/core": "^0.0.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.24",
