--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ursa/router",
+  "name": "@ursajs/router",
   "version": "0.0.1",
   "description": "router",
   "author": "zhangzhihua <zhangzhihua01@58ganji.com>",
@@ -33,7 +33,7 @@
     "@types/node": "^10.12.15",
     "@typescript-eslint/eslint-plugin": "^1.1.0",
     "@typescript-eslint/parser": "^1.1.0",
-    "@ursa/core": "^0.0.1",
+    "@ursajs/core": "^0.0.1",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
