--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -14,6 +14,7 @@
     "index.d.ts"
   ],
   "publishConfig": {
+    "registry": "http://registry.npmjs.org"
   },
   "repository": {
     "type": "git",
