--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -14,6 +14,8 @@
     "index.d.ts"
   ],
   "publishConfig": {
+    "registry": "http://registry.npmjs.org",
+    "access": "public"
   },
   "scripts": {
     "fix": "esw src --fix --ext .ts",
