--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,23 +1,32 @@
 {
-  "name": "@ursajs/cli",
-  "version": "0.0.2",
-  "description": "> TODO: description",
-  "author": "zhangzhihua <zhangzhihua01@58ganji.com>",
+  "name": "@wf-node/cli",
+  "version": "0.2.2",
+  "private": true,
+  "description": "router",
+  "author": "",
   "license": "ISC",
-  "main": "lib/index.js",
   "directories": {
     "lib": "lib",
     "test": "__tests__"
   },
+  "bin": {
+    "wf-node": "./bin/index.js"
+  },
   "files": [
     "lib",
+    "bin",
     "index.d.ts"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org",
-    "access": "public"
+    "registry": "http://ires.58corp.com/repository/npm/"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git@igit.58corp.com:node/wf-node.git"
   },
   "scripts": {
+    "init": "ts-node ./src/init.ts",
+    "test": "mocha test",
     "fix": "esw src --fix --ext .ts",
     "lint": "esw src --clear --ext .ts",
     "lint-w": "esw src --clear -w --ext .ts",
@@ -27,9 +36,19 @@
     "build": "tsc",
     "prepublish": "npm run build"
   },
+  "dependencies": {
+    "commander": "^3.0.2",
+    "consolidate": "^0.15.1",
+    "ejs": "^2.7.1",
+    "inquirer": "^7.0.0",
+    "metalsmith": "^2.3.0",
+    "ora": "^4.0.2",
+    "simple-git": "^1.129.0",
+    "typescript": "^3.5.1"
+  },
   "devDependencies": {
-    "@types/jest": "^24.0.24",
-    "@types/node": "^10.12.15",
+    "@types/inquirer": "^6.5.0",
+    "@types/node": "^10.14.9",
     "@typescript-eslint/eslint-plugin": "^1.1.0",
     "@typescript-eslint/parser": "^1.1.0",
     "eslint": "^5.10.0",
@@ -39,7 +58,10 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-watch": "^4.0.2",
+    "install": "^0.13.0",
+    "npm": "^6.13.6",
     "npm-run-all": "^4.1.5",
-    "typescript": "^3.2.2"
-  }
+    "ts-node": "^8.2.0"
+  },
+  "gitHead": "23e9211bf5940c92e3fe3a59d11ac90f0cd93973"
 }
