--- a/packages/plugin-status/package.json
+++ b/packages/plugin-status/package.json
@@ -28,7 +28,6 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "@ursajs/core": "^0.0.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.24",
@@ -36,13 +35,14 @@
     "@types/node": "^10.12.15",
     "@typescript-eslint/eslint-plugin": "^1.1.0",
     "@typescript-eslint/parser": "^1.1.0",
+    "@ursajs/core": "^0.0.2",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-typescript": "^0.14.0",
-    "eslint-watch": "^4.0.2",
+    "eslint-watch": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "typescript": "^3.2.2"
   },
