--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -13,9 +13,6 @@
     "lib",
     "index.d.ts"
   ],
-  "publishConfig": {
-    "registry": "http://registry.npmjs.org"
-  },
   "repository": {
     "type": "git",
     "url": "git@igit.58corp.com:node/ursa.git"
@@ -34,8 +31,7 @@
     "@types/koa": "^2.0.48",
     "@types/koa-views": "^2.0.3",
     "npm-run-all": "^4.1.5",
-    "ts-node": "^8.2.0",
-    "ts-node-dev": "^1.0.0-pre.32",
-    "typescript": "^3.2.2"
+    "ts-node": "^8.8.1",
+    "ts-node-dev": "^1.0.0-pre.44"
   }
 }
