--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -28,8 +28,7 @@
   },
   "dependencies": {
     "array.prototype.flat": "^1.2.2",
-    "koa-body": "^4.1.1",
-    "koa-send": "^5.0.0"
+    "koa-body": "^4.1.1"
   },
   "devDependencies": {
     "@types/array.prototype.flat": "^1.2.0",
@@ -48,8 +47,9 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-watch": "^6.0.1",
+    "jsonp-body": "1.0.0",
     "koa": "^2.11.0",
-    "koa-views": "^6.2.0",
+    "koa-send": "^5.0.0",
     "npm-run-all": "^4.1.5",
     "typescript": "^3.2.2"
   },
