--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -22,10 +22,8 @@
     "access": "public"
   },
   "scripts": {
-    "init": "ts-node ./src/init.ts",
-    "test": "mocha test",
     "fix": "esw src --fix --ext .ts",
-    "lint": "esw src --clear --ext .ts",
+    "lint": "esw src --ext .ts",
     "lint-w": "esw src --clear -w --ext .ts",
     "build-w": "tsc -w --inlineSourceMap",
     "start": "run-p lint-w build-w",
@@ -46,13 +44,13 @@
   "devDependencies": {
     "@types/inquirer": "^6.5.0",
     "@types/node": "^10.14.9",
-    "@typescript-eslint/eslint-plugin": "^1.1.0",
-    "@typescript-eslint/parser": "^1.1.0",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-watch": "^6.0.1",
     "install": "^0.13.0",
