--- a/packages/plugin-status/package.json
+++ b/packages/plugin-status/package.json
@@ -19,7 +19,7 @@
   },
   "scripts": {
     "fix": "esw src --fix --ext .ts",
-    "lint": "esw src --clear --ext .ts",
+    "lint": "esw src --ext .ts",
     "lint-w": "esw src --clear -w --ext .ts",
     "build-w": "tsc -w --inlineSourceMap",
     "start": "run-p lint-w build-w",
@@ -31,18 +31,16 @@
     "@types/jest": "^24.0.24",
     "@types/koa": "^2.0.51",
     "@types/node": "^10.12.15",
-    "@typescript-eslint/eslint-plugin": "^1.1.0",
-    "@typescript-eslint/parser": "^1.1.0",
-    "@ursajs/core": "^0.0.8",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-watch": "^6.0.1",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^3.2.2"
+    "npm-run-all": "^4.1.5"
   },
   "repository": {
     "type": "git",
