feat(git): add checker

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -18,11 +18,11 @@
   },
   "scripts": {
     "fix": "esw src --fix --ext .ts",
-    "lint": "esw src --ext .ts",
-    "lint-w": "esw src --clear -w --ext .ts",
+    "lint": "eslint src --ext .ts",
+    "lint-w": "esw src --clear --color -w --ext .ts",
     "build-w": "tsc -w --inlineSourceMap",
     "start": "run-p lint-w build-w",
-    "prebuild": "esw src --ext .ts",
+    "prebuild": "npm run lint",
     "build": "tsc",
     "prepublish": "npm run build"
   },
