--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "test:router": "jest ./packages/router/__tests__ --runInBand --forceExit",
     "test": "npm run test:core && npm run test:router",
     "prepublish": "npm test && lerna run lint && lerna run build",
-    "publish": "lerna publish"
+    "publish": "lerna publish",
+    "postinstall": "npx checker-init"
   },
   "devDependencies": {
     "@types/jest": "^24.0.13",
     "@types/node": "^12.0.8",
+    "commit-msg-checker": "^1.0.4",
     "commitizen": "^4.0.3",
     "cz-conventional-changelog": "^3.1.0",
     "del-cli": "^3.0.0",
