--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -33,13 +33,9 @@
   },
   "dependencies": {
     "commander": "^3.0.2",
-    "consolidate": "^0.15.1",
-    "ejs": "^2.7.1",
     "inquirer": "^7.0.0",
-    "metalsmith": "^2.3.0",
     "ora": "^4.0.2",
-    "simple-git": "^1.129.0",
-    "typescript": "^3.5.1"
+    "simple-git": "^1.129.0"
   },
   "devDependencies": {
     "@types/consolidate": "^0.14.0",
@@ -56,7 +52,7 @@
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-watch": "^6.0.1",
     "npm-run-all": "^4.1.5",
-    "ts-node": "^8.2.0"
+    "typescript": "^3.5.1"
   },
   "repository": {
     "type": "git",
