--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,14 +23,13 @@
   "dependencies": {
     "@ursajs/core": "^0.1.2",
     "@ursajs/router": "^0.1.2",
+    "@ursajs/plugin-static": "^0.1.1",
     "koa": "^2.11.0",
-    "koa-static": "^5.0.0",
     "koa-views": "^6.2.1",
     "nunjucks": "^3.2.0"
   },
   "devDependencies": {
     "@types/koa": "^2.0.48",
-    "@types/koa-static": "^4.0.1",
     "@types/koa-views": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "ts-node": "^8.8.1",
