style: ursa rename to uma

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "args": [
                 "src/index.ts",
                 "project",
-                "ursa-demo"
+                "uma-demo"
             ],
             "cwd": "${workspaceRoot}/packages/cli",
             "protocol": "inspector"
