--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@umajs/core": "^0.1.4",
+    "@umajs/plugin-i18n": "^0.1.4",
     "@umajs/plugin-static": "^0.1.4",
     "@umajs/router": "^0.1.4",
     "koa": "^2.11.0",
