--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -23,8 +23,9 @@
   "dependencies": {
     "@umajs/core": "^0.0.9",
     "@umajs/plugin-i18n": "^0.0.9",
-    "@umajs/plugin-static": "^0.0.9",
     "@umajs/plugin-session": "^0.0.9",
+    "@umajs/plugin-static": "^0.0.9",
+    "@umajs/plugin-status": "^0.0.9",
     "@umajs/router": "^0.0.9",
     "koa": "^2.11.0",
     "koa-views": "^6.2.1",
