--- a/packages/plugin-i18n/package.json
+++ b/packages/plugin-i18n/package.json
@@ -31,12 +31,12 @@
   },
   "devDependencies": {
     "@types/jest": "^24.0.15",
-    "@types/koa": "^2.0.48",
     "@types/node": "^10.12.15",
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^1.1.0",
     "@typescript-eslint/parser": "^1.1.0",
-    "@umajs/core": "^0.1.4",
+	"@umajs/core": "^0.1.4",
+	"@umajs/router": "^0.1.4",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
