--- a/packages/plugin-session/package.json
+++ b/packages/plugin-session/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wf-node/plugin-session",
+  "name": "@umajs/plugin-session",
   "version": "0.2.0",
   "description": "router",
   "author": "zhangzhihua <zhangzhihua01@58ganji.com>",
@@ -27,12 +27,13 @@
     "prepublish": "npm run build"
   },
   "devDependencies": {
+    "@types/crypto-js": "^3.1.45",
     "@types/jest": "^24.0.15",
-    "@types/koa": "^2.0.48",
     "@types/node": "^10.12.15",
     "@typescript-eslint/eslint-plugin": "^1.1.0",
     "@typescript-eslint/parser": "^1.1.0",
-    "@wf-node/core": "^0.2.0",
+    "@umajs/core": "^0.1.4",
+    "@umajs/router": "^0.1.4",
     "eslint": "^5.10.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
@@ -43,5 +44,8 @@
     "npm-run-all": "^4.1.5",
     "typescript": "^3.2.2"
   },
-  "gitHead": "23e9211bf5940c92e3fe3a59d11ac90f0cd93973"
+  "gitHead": "23e9211bf5940c92e3fe3a59d11ac90f0cd93973",
+  "dependencies": {
+    "crypto-js": "^4.0.0"
+  }
 }
