--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -24,6 +24,7 @@
     "@umajs/core": "^0.1.4",
     "@umajs/plugin-i18n": "^0.1.4",
     "@umajs/plugin-static": "^0.1.4",
+    "@umajs/plugin-session": "^0.1.4",
     "@umajs/router": "^0.1.4",
     "koa": "^2.11.0",
     "koa-views": "^6.2.1",
