--- a/packages/plugin-session/package.json
+++ b/packages/plugin-session/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umajs/plugin-session",
-  "version": "0.1.4",
+  "version": "0.0.9",
   "description": "router",
   "author": "zhangzhihua <zhangzhihua01@58ganji.com>",
   "license": "ISC",
@@ -17,30 +17,30 @@
     "registry": "http://ires.58corp.com/repository/npm/"
   },
   "scripts": {
-    "test": "jest ./__tests__ --runInBand",
-    "lint": "esw src --clear --ext .ts",
-    "lint-w": "esw src --clear -w --ext .ts",
+    "fix": "esw src --fix --ext .ts",
+    "lint": "eslint src --ext .ts",
+    "lint-w": "esw src --clear --color -w --ext .ts",
     "build-w": "tsc -w --inlineSourceMap",
     "start": "run-p lint-w build-w",
-    "prebuild": "esw src --ext .ts",
+    "prebuild": "npm run lint",
     "build": "tsc",
     "prepublish": "npm run build"
   },
   "devDependencies": {
     "@types/crypto-js": "^3.1.45",
-    "@types/jest": "^24.0.15",
+    "@types/jest": "^24.0.24",
     "@types/node": "^10.12.15",
-    "@typescript-eslint/eslint-plugin": "^1.1.0",
-    "@typescript-eslint/parser": "^1.1.0",
-    "@umajs/core": "^0.1.4",
-    "@umajs/router": "^0.1.4",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-node": "^8.0.1",
-    "eslint-plugin-promise": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^2.25.0",
+    "@typescript-eslint/parser": "^2.25.0",
+    "@umajs/core": "^0.0.9",
+    "@umajs/router": "^0.0.9",
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-typescript": "^0.14.0",
-    "eslint-watch": "^4.0.2",
+    "eslint-watch": "^6.0.1",
     "npm-run-all": "^4.1.5",
     "typescript": "^3.2.2"
   },
