--- a/packages/plugin-i18n/package.json
+++ b/packages/plugin-i18n/package.json
@@ -14,7 +14,8 @@
     "index.d.ts"
   ],
   "publishConfig": {
-    "registry": "http://ires.58corp.com/repository/npm/"
+    "registry": "http://registry.npmjs.org",
+    "access": "public"
   },
   "scripts": {
     "fix": "esw src --fix --ext .ts",
@@ -46,5 +47,12 @@
     "eslint-watch": "^6.0.1",
     "npm-run-all": "^4.1.5"
   },
-  "gitHead": "23e9211bf5940c92e3fe3a59d11ac90f0cd93973"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Umajs/Uma.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Umajs/Uma/issues"
+  },
+  "homepage": "https://github.com/Umajs/Uma#readme"
 }
