--- a/packages/plugin-session/package.json
+++ b/packages/plugin-session/package.json
@@ -14,7 +14,8 @@
     "index.d.ts"
   ],
   "publishConfig": {
-    "registry": "http://ires.58corp.com/repository/npm/"
+    "registry": "http://registry.npmjs.org",
+    "access": "public"
   },
   "scripts": {
     "fix": "esw src --fix --ext .ts",
@@ -25,6 +26,9 @@
     "prebuild": "npm run lint",
     "build": "tsc",
     "prepublish": "npm run build"
+  },
+  "dependencies": {
+    "crypto-js": "^4.0.0"
   },
   "devDependencies": {
     "@types/crypto-js": "^3.1.45",
@@ -44,8 +48,12 @@
     "npm-run-all": "^4.1.5",
     "typescript": "^3.2.2"
   },
-  "gitHead": "23e9211bf5940c92e3fe3a59d11ac90f0cd93973",
-  "dependencies": {
-    "crypto-js": "^4.0.0"
-  }
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Umajs/Uma.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Umajs/Uma/issues"
+  },
+  "homepage": "https://github.com/Umajs/Uma#readme"
 }
