--- a/packages/plugin-session/package.json
+++ b/packages/plugin-session/package.json
@@ -45,8 +45,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-watch": "^6.0.1",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^3.2.2"
+    "npm-run-all": "^4.1.5"
   },
   "repository": {
     "type": "git",
