--- a/packages/plugin-views/package.json
+++ b/packages/plugin-views/package.json
@@ -37,6 +37,7 @@
     "@types/node": "^10.12.15",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
+    "@umajs/core": "^0.1.3",
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
