--- a/packages/arg-decorator/package.json
+++ b/packages/arg-decorator/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@umajs/arg-decorator",
   "version": "1.0.0",
+  "private": true,
   "description": "uma arg-decorator",
   "author": "zhangzhihua <zzh627@126.com>",
   "license": "ISC",
