--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,12 +22,13 @@
     "app": "ts-node-dev --respawn src/app.ts"
   },
   "dependencies": {
+    "@umajs/arg-decorator": "^1.0.1",
     "@umajs/core": "^1.0.1",
+    "@umajs/path": "^1.0.1",
     "@umajs/plugin-i18n": "^1.0.1",
     "@umajs/plugin-session": "^1.0.1",
     "@umajs/plugin-static": "^1.0.1",
     "@umajs/plugin-status": "^1.0.1",
-    "@umajs/arg-decorator": "^1.0.1",
     "@umajs/router": "^1.0.1",
     "koa": "^2.11.0",
     "koa-views": "^6.2.1",
