--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "test": "npm run test:core && npm run test:router && npm run test:i18n && npm run test:session",
     "prepublish": "npm test && lerna run lint && lerna run build",
     "publish": "lerna publish",
-    "postinstall": "npx checker-init"
+    "postinstall": "npx checker-init",
+    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
   },
   "devDependencies": {
     "@types/jest": "^26.0.7",
