--- a/packages/arg-decorator/package.json
+++ b/packages/arg-decorator/package.json
@@ -36,6 +36,7 @@
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "@umajs/core": "^1.1.2",
+    "@umajs/router":"^1.1.2",
     "eslint": "^7.0.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.1",
