--- a/packages/plugin-status/package.json
+++ b/packages/plugin-status/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "umajs status",
   "author": "zhangzhihua <zzh627@126.com>",
-  "license": "ISC",
+  "license": "MIT",
   "main": "lib/index.js",
   "directories": {
     "lib": "lib",
