--- a/packages/arg-decorator/package.json
+++ b/packages/arg-decorator/package.json
@@ -27,8 +27,7 @@
     "prepublish": "npm run build"
   },
   "dependencies": {
-    "@umajs/model": "^0.2.0",
-    "validate": "^5.1.0",
+    "@umajs/class-validator": "^0.2.1",
     "validator": "^13.1.17"
   },
   "devDependencies": {
