fix:工程初始化后自动调用init命令

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run test:core && npm run test:router && npm run test:i18n && npm run test:session && npm run test:arg",
     "prepublish": "npm run test && lerna run lint && lerna run build",
     "publish": "lerna publish",
-    "postinstall": "npx checker-init",
+    "postinstall": "npx checker-init && npm run init",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
   },
   "devDependencies": {
