perf:update dependencies && fix i18n tslint

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ packages/plugin-logger/__tests__/app/src/logs/
 packages/logger/__tests__/__mocks__/log/
 packages/app/logs/home.log
 yarn-error.log
+packages/app/yarn.lock
