--- a/packages/arg-decorator/package.json
+++ b/packages/arg-decorator/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umajs/arg-decorator",
-  "version": "2.0.1-alpha.0",
+  "version": "2.0.1",
   "description": "uma arg-decorator",
   "author": "zhangzhihua <zzh627@126.com>",
   "license": "MIT",
@@ -35,8 +35,8 @@
     "@types/node": "^12.12.9",
     "@typescript-eslint/eslint-plugin": "^4.26.0",
     "@typescript-eslint/parser": "^4.9.1",
-    "@umajs/core": "^2.0.1-alpha.0",
-    "@umajs/router": "^2.0.1-alpha.0",
+    "@umajs/core": "^2.0.1",
+    "@umajs/router": "^2.0.1",
     "eslint": "^7.15.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-plugin-import": "^2.23.4",
