--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "lerna": "^4.0.0",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.5",
-    "typescript": "^4.2.4"
+    "typescript": "4.8.3"
   },
   "config": {
     "commitizen": {
