feat: update ts-node

--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "engines": {
+    "node": ">= 12.22.0"
   }
 }
