--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -49,8 +49,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-typescript": "^0.14.0",
     "eslint-watch": "^7.0.0",
-    "npm-run-all": "^4.1.5",
-    "typescript": "^3.5.1"
+    "npm-run-all": "^4.1.5"
   },
   "repository": {
     "type": "git",
