perf: update registry

--- a/packages/path/package.json
+++ b/packages/path/package.json
@@ -14,7 +14,7 @@
     "index.d.ts"
   ],
   "publishConfig": {
-    "registry": "http://registry.npmjs.org",
+    "registry": "https://registry.npmjs.org",
     "access": "public"
   },
   "scripts": {
@@ -50,5 +50,6 @@
   "bugs": {
     "url": "https://github.com/wuba/Umajs/issues"
   },
-  "homepage": "https://github.com/wuba/Umajs#readme"
+  "homepage": "https://github.com/wuba/Umajs#readme",
+  "gitHead": "f30084ad6d7637290f231ce96a4cb488d36186ee"
 }
