--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umajs/cli",
-  "version": "2.0.4-alpha.0",
+  "version": "2.0.4",
   "description": "uma cli",
   "author": "",
   "license": "MIT",
