--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,14 +22,14 @@
     "app": "ts-node-dev --respawn src/app.ts"
   },
   "dependencies": {
-    "@umajs/arg-decorator": "^2.0.4-alpha.0",
-    "@umajs/core": "^2.0.4-alpha.0",
+    "@umajs/arg-decorator": "^2.0.4",
+    "@umajs/core": "^2.0.4",
     "@umajs/path": "^1.2.1",
-    "@umajs/plugin-i18n": "^2.0.4-alpha.0",
-    "@umajs/plugin-session": "^2.0.4-alpha.0",
+    "@umajs/plugin-i18n": "^2.0.4",
+    "@umajs/plugin-session": "^2.0.4",
     "@umajs/plugin-static": "^1.2.0",
     "@umajs/plugin-status": "^1.2.0",
-    "@umajs/router": "^2.0.4-alpha.0",
+    "@umajs/router": "^2.0.4",
     "koa": "^2.13.0",
     "koa-views": "^6.3.1",
     "nunjucks": "^3.2.0"
