--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@umajs/core",
-  "version": "2.0.4-alpha.0",
+  "version": "2.0.4",
   "description": "uma core",
   "author": "zhangzhihua <zzh627@126.com>",
   "license": "MIT",
