--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "root",
   "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "scripts": {
     "init": "del -f packages/*/node_modules && del -f packages/*/lib && lerna bootstrap",
     "clear:lock":"del -f packages/*/yarn.lock",
@@ -13,21 +16,21 @@
     "test": "npm run test:core && npm run test:router && npm run test:i18n && npm run test:session && npm run test:arg",
     "prepublish": "npm run test && lerna run lint && lerna run build",
     "publish": "lerna publish",
-    "postinstall": "npx checker-init && npm run init",
+    "postinstall": "npx checker-init",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0 && git add CHANGELOG.md"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.22",
-    "@types/node": "^14.14.41",
-    "commit-msg-checker": "^1.0.7",
-    "commitizen": "^4.2.3",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.9",
+    "commit-msg-checker": "^1.0.8",
+    "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
-    "del-cli": "^3.0.1",
-    "jest": "^26.6.3",
-    "lerna": "^4.0.0",
-    "supertest": "^6.1.3",
-    "ts-jest": "^26.5.5",
-    "typescript": "^4.8.3"
+    "del-cli": "^7.0.0",
+    "jest": "^30.2.0",
+    "lerna": "^8.1.9",
+    "supertest": "^7.2.2",
+    "ts-jest": "^29.4.6",
+    "typescript": "^5.9.3"
   },
   "config": {
     "commitizen": {
