--- a/packages/plugin-i18n/tsconfig.json
+++ b/packages/plugin-i18n/tsconfig.json
@@ -11,9 +11,9 @@
         "removeComments": true,
         "preserveWatchOutput": true,
         "experimentalDecorators": true,
-        "baseUrl": "./src",
+        "baseUrl": "./src"
     },
     "include":[
-        "./src/**/*",
-    ],
+        "./src/**/*"
+    ]
 }
