refactor: 统一模块导入方式并更新依赖版本

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -10,7 +10,9 @@
         "alwaysStrict": true,
         "removeComments": true,
         "preserveWatchOutput": true,
-        "experimentalDecorators": true
+        "experimentalDecorators": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true
     },
     "include":[
         "./src/**/*"
