--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,6 @@
   "packages": [
     "packages/*"
   ],
-  "npmClient": "yarn",
-  "useWorkspaces": true,
+  "npmClient": "npm",
   "version": "2.0.5"
 }
