feat: Add a dependency injection container and error handling class

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   ],
   "scripts": {
     "init": "del -f packages/*/node_modules && del -f packages/*/lib && lerna bootstrap",
-    "clear:lock":"del -f packages/*/yarn.lock",
+    "clear:lock": "del -f packages/*/yarn.lock",
     "commit": "npx git-cz",
     "test:core": "jest ./packages/core/__tests__ --runInBand",
     "test:router": "jest ./packages/router/__tests__ --runInBand --forceExit",
@@ -39,5 +39,8 @@
   },
   "engines": {
     "node": ">= 12.22.0"
+  },
+  "dependencies": {
+    "reflect-metadata": "^0.2.2"
   }
 }
