--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -11,6 +11,7 @@
         "removeComments": true,
         "preserveWatchOutput": true,
         "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "esModuleInterop": true,
         "skipLibCheck": true
     },
